--- a/notes/lecture3_dplyr.html
+++ b/notes/lecture3_dplyr.html
@@ -180,7 +180,7 @@ summary {
 
 <h1 class="title toc-ignore">Lecture 3: intro to R and dplyr</h1>
 <h4 class="author">Gabriele Degola</h4>
-<h4 class="date">21/10/2021</h4>
+<h4 class="date">October, 2021</h4>
 
 </div>
 
@@ -339,7 +339,7 @@ summary {
 ## 7     8     3     16.3   1.05     3
 ## 8     8     4     13.2   2.28     6
 ## 9     8     8     15    NA        1</code></pre>
-<p>Take care that <code>n</code> is a special function to be used in a data context. <code>nrow</code> returns the number of observations in a dataframe.</p>
+<p>Note that <code>n</code> is a special function to be used in a data context. <code>nrow</code> returns the number of observations in a dataframe.</p>
 <pre class="r"><code>nrow(mtcars)</code></pre>
 <pre><code>## [1] 32</code></pre>
 <p><code>ungroup</code> is used to remove grouping and perform other operations on the whole dataframe. By itself, it does not do anything:</p>
